--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,101 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+	margin: 0;
+	padding: 0;
 }
 
-.leaflet-container
-{
-	height: 100vh;
+body {
+	font-family: 'Segoe UI', 'Roboto', 'Oxygen';
+	margin: 0;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+}
+
+header {
+	background-image: url('assets/pattern-bg.png');
+	background-size: cover;
+	height: 40vh;
+	z-index: 999;
+	text-align: center;
+}
+
+h1 {
+	color: white;
+}
+
+.leaflet-container {
+	height: 60vh;
+}
+
+.input-wrapper {
+	display: flex;
+	background-color: white;
+	margin: auto;
+	width: 35%;
+	height: 20%;
+	margin-top: 20px;
+}
+
+.input-wrapper, #search-btn {
+	border-top-right-radius: 25px;
+	border-bottom-right-radius: 25px;
+}
+
+.input-wrapper input {
+	border: 0;
+	height: 100%;
+	width: 100%;
+	padding-left: 5px;
+	font-weight: bold; 
+	font-size: medium;
+
+}
+
+.input-wrapper input::placeholder {
+	font-weight: normal; 
+}
+
+#search-btn {
+	background-color: black;
+	background-image: url('assets/icon-arrow.svg');
+	background-position: center;
+	background-repeat: no-repeat;
+	height: 100%;
+	width: 10%;
+}
+
+.info {
+	background-color: white;
+	display: flex;
+	/* justify-content: center; */
+	margin: auto;
+	margin-top: 50px;
+	padding: 20px 20px 20px 20px;
+	border-radius: 25px;
+	width: 50%;
+}
+
+.info div {
+	width: 100%;
+	border-right: 1px solid black;
+}
+
+.info div:not(:first-child) {
+	margin-left: 20px;
+}
+
+.info div:last-child {
+	border-right: none;
+}
+
+span {
+	font-size: small;
+	color: gray;
+}
+
+.info div p {
+	font-weight: bold;
+	font-size: x-large;
 }
