--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 
 body {
 	font-family: 'Segoe UI', 'Roboto', 'Oxygen';
-	margin: 0;
 }
 
 main {
@@ -72,7 +71,6 @@ h1 {
 .info {
 	background-color: white;
 	display: flex;
-	/* justify-content: center; */
 	margin: auto;
 	margin-top: 50px;
 	padding: 20px 20px 20px 20px;
@@ -101,4 +99,40 @@ span {
 .info div p {
 	font-weight: bold;
 	font-size: x-large;
+}
+
+@media (max-width: 375px) {
+	
+	h1 {
+		margin-top: 10px;
+		font-size: x-large;
+	}
+
+	.input-wrapper {
+		width: 90%;
+	}
+	
+
+	.info {
+		display: inline-block;
+	}
+
+	.info div {
+		border-right: none;
+	}
+
+	.info div:not(:first-child) {
+		margin-top: 10px;
+		margin-left: 0px;
+	}
+
+	span {
+		font-size: smaller;
+		color: gray;
+	}
+
+	.info div p {
+		font-weight: bold;
+		font-size: large;
+	}
 }
